--- a/assignments/3. todo/todo/style.css
+++ b/assignments/3. todo/todo/style.css
@@ -26,6 +26,7 @@ input{
     box-shadow: inset 0 -2px 5px rgba(0,0,0,0.1);
 }
 input[type = "text"]{
+	/* display: inline-block; */
 	font-size: 24px;
 	line-height: 1.4em;
 	text-align: start;
@@ -48,8 +49,9 @@ footer{
 }
 
 li{
-	display: grid;
-	grid-template-columns: 3fr 1fr;
+	display: flex;
+	/* display: grid; */
+	/* grid-template-columns: 1fr 3fr 1fr;	 */
 	margin-bottom: 3px;
 	width: 100%;
 	padding: 16px 16px 10px 60px;
@@ -60,17 +62,22 @@ li{
 	
 }
 button{
-	/* background-color: black; */
-	color: black;
+	color: rgb(233, 139, 201);
+	background: transparent;
 	margin-right: 3rem;
 	box-sizing: border-box;
-	padding: 10px 20px;
+	/* padding: 10px 20px; */
+	font-size: 15px;
 	border: none;
-	display: none;
+	visibility: hidden
 }
-li:hover{
-	display: inline-block;
-	color: #000;
+li:hover button{
+	visibility: visible;
 	opacity: 1;
+	
+}
+input[type = "checkbox"]{
+	height: 20px;
+	
 }
 
